[package]
name = "picori"
version = "0.1.1"
edition = "2021"
authors = ["Julgodis <self@julgodis.xyz>"]

repository = "https://github.com/Julgodis/picori"
readme = "README.md"
description = "Library building modding and decomplication tools for GameCube/Wii games"
keywords = ["dol", "rel", "rarc", "yaz0", "gamecube"]
categories = ["encoding", "compression", "parsing", "modding", "deomp"]

license = "MIT"
license-file = "LICENSE"

build = "scripts/build.rs"
publish = false

[features]
# by default, picori will be built with all features enabled
default = [
    "ciso",
    "elf",
    "dol",
    "gcm",
    "rarc",
    "rel",
    "file",
    "yaz0",
    "yay0",
    "compression",
    "demangle_mwcc",
    "demangle",
    "ascii",
    "jis_x_0201",
    "shift_jis_1997",
    "shift_jis_2004",
    "encoding",
]

# file formats
file = []
ciso = ["file"]
elf = ["file"]
dol = ["file"]
gcm = ["file", "ascii"]
rarc = ["file"]
rel = ["file"]

# compression
yaz0 = ["compression"]
yay0 = ["compression"]
compression = []

# demangling
demangle_mwcc = ["demangle"]
demangle = []

# encoding
ascii = ["encoding"]
jis_x_0201 = ["encoding"]
shift_jis_1997 = ["encoding", "jis_x_0201"]
shift_jis_2004 = ["encoding", "jis_x_0201"]
encoding = []

[dependencies]
thiserror = "1.0"

[build-dependencies]
thiserror = "1.0"
