[package]
name = "picori"
version = "0.1.1"
edition = "2021"
authors = ["Julgodis <self@julgodis.xyz>"]

repository = "https://github.com/Julgodis/picori"
license = "MIT"
readme = "README.md"
description = "Picori is a library for decompilation, modding, and rom-hacking with focus on GameCube and Wii games."
keywords = ["dol", "rel", "rarc", "yaz0", "gamecube"]
categories = ["encoding", "compression", "parser-implementations"]

build = "scripts/build.rs"
publish = false

[features]
# by default, picori will be built with all features enabled
default = ["ciso", "dol", "gcm", "rel", "yaz0", "ascii", "jis_x_0201", "shift_jis_1997", "shift_jis_2004", "source_location"]

ciso = []
gcm = ["ascii", "dol"]
dol = []
rel = []
yaz0 = []
ascii = []
jis_x_0201 = []
shift_jis_1997 = ["jis_x_0201"]
shift_jis_2004 = ["jis_x_0201"]

source_location = []

[dependencies]
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

[build-dependencies]
thiserror = "1.0"
