[package]
name = "picori"
version = "0.1.1"
edition = "2021"
authors = ["Julgodis <self@julgodis.xyz>"]

repository = "https://github.com/Julgodis/picori"
license = "MIT"
readme = "README.md"
description = "Picori is a library for decompilation, modding, and rom-hacking with focus on GameCube and Wii games."
keywords = ["dol", "rel", "rarc", "yaz0", "gamecube"]
categories = ["encoding", "compression", "parser-implementations"]

build = "scripts/build.rs"

include = [
    "LICENSE",
    "README.md",
    "examples/*",
    "scripts/*",
    "src/*",
    "assets/build/*",
]

[features]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
thiserror = "1.0"
